# avail-sp1

./: .gitignore  readme.md
avail-subxt/: Cargo.toml
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
