[workspace]
[package]
version = "0.1.0"
name = "avail-sp1-program"
edition = "2021"

[dependencies]
# avail-subxt = { path = "../avail-subxt", default-features = false, features = ["native"] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
subxt = { version = "0.34.0", default-features = false, features = ["native"] }
avail-core = { git = "https://github.com/availproject/avail-core", branch = "main", default-features = false, features = ["runtime", "serde"] }
avail-base = { git = "https://github.com/availproject/avail", branch = "main", default-features = false }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false, features = ["disable_panic_handler"] }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false }
derive_more = { version = "0.99.0", default-features = false, features = ["from", "add", "iterator", "deref", "constructor", "mul", "display"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
binary-merkle-tree = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false }
scale-info = { version = "2.5.0", features = ["bit-vec"] }
bounded-collections = { version = "0.2.0", features = ["serde"] }
getrandom = { version = "0.1.16", default-features = false, features = ["dummy"]}
anyhow = { version = "1.0.66" }